# what-if-flask

./: README.md  app.py  functions.py  main.py  pyproject.toml
static/: dashboard.css  intro.css  style.css
templates/: admin.html  banned.html  dashboard.html  editscenario.html  index.html  intro.html  login.html  newscenario.html  scenario.html  usernamefromid.html  userprofile.html
