[tool.poetry]
name = "What-If"
version = "0.8.1"
description = "What If made with Python!"
authors = ["VulcanWM , Aayu5h"]

[tool.poetry.dependencies]
python = "^3.8"
dnspython = "^2.2.1"
pymongo = "^4.2.0"
Flask = "^2.2.2"
better-profanity = "^0.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
